--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <div id="mainvisual">
-        <video src="vbmu0-r2w4o.mp4" controls muted autoplay playinline loop></video>
+        <video src="vbmu0-r2w4o.mp4" controls muted autoplay playsinline loop></video>
       </div>
 
       <section id="about" class="wrapper">
